# ultralight-coder

./: .gitignore  BENCHMARKS.md  CLAUDE.md  LICENSE  MULTI_AGENT_RESULTS.md  README.md  SECURITY_PROMPTS.md  TODO.md  USER_GUIDE.md  _selftest_multilang.py  bench2_flat_0.5b.json  bench2_flat_deepseek.json  bench2_flat_phi.json  bench2_flat_qwen15.json  bench2_flat_qwen3b.json  bench2_flat_stable.json  bench2_flat_yi.json  bench2_graph_0.5b.json  bench2_graph_deepseek.json  bench2_graph_phi.json  bench2_graph_qwen15.json  bench2_graph_qwen3b.json  bench2_graph_stable.json  bench2_graph_yi.json  bench_coder3b.txt  bench_coder_pipeline.txt  bench_deepseek.txt  bench_deepseek_graph.json  bench_direct_0.5b.json  bench_direct_deepseek.json  bench_direct_phi.json  bench_direct_qwen15.json  bench_direct_qwen3b.json  bench_direct_stable.json  bench_direct_yi.json  bench_flat_0.5b.json  bench_flat_Phi-3.5-mini-instruct-Q4_K_M.json  bench_flat_deepseek-coder-1.3b-instruct.Q4_K_M.json  bench_flat_qwen2.5-coder-0.5b-instruct-q4_k_m.json  bench_flat_qwen2.5-coder-1.5b-instruct-q4_k_m.json  (+158 more)
bench_pure_20260401_102411/: bench_auto_deepseek-coder-1.3b-instruct.Q4_K_M.json  bench_auto_qwen2.5-coder-0.5b-instruct-q4_k_m.json  bench_auto_qwen2.5-coder-1.5b-instruct-q4_k_m.json  bench_auto_qwen2.5-coder-3b-instruct-q4_k_m.json  bench_direct_deepseek-coder-1.3b-instruct.Q4_K_M.json  bench_direct_qwen2.5-coder-0.5b-instruct-q4_k_m.json  bench_direct_qwen2.5-coder-1.5b-instruct-q4_k_m.json  bench_direct_qwen2.5-coder-3b-instruct-q4_k_m.json  bench_flat_deepseek-coder-1.3b-instruct.Q4_K_M.json  (+19 more)
data/: pattern_graph.yaml
(+231 files in other folders)
